--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     </style>
 </head>
 <body>
-
+ 
     <div>
+        <a href="div.html">Checkout div my profile</a>
         <h1 style="color:blueviolet">Main div</h1>
         <p>Divs are elememnts that are used to orgnaise 
             and create layouts. They are containers of other 
